--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jquery_carousel",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "the plugin of carousel with jquery",
   "main": "dist/jquery_carousel.js",
   "directories": {
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha-phantomjs test/test-demo.html"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,10 @@
     "url": "https://github.com/Caofh/jquery_carousel/issues"
   },
   "homepage": "https://github.com/Caofh/jquery_carousel#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "mocha-phantomjs": "^4.1.0"
   }
 }
